Update index.html. Create subpages for sprint 0 preliminary and final.

--- a/index.html
+++ b/index.html
@@ -37,19 +37,14 @@
           <span class="credits left">Project maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
+<h3><a name="Team-Info:" class="anchor" href="#Team-Info:"><span class="octicon octicon-link"></span></a>Team-Info:</h3>
+<br>
 
         <h3>
-<a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a>Sprint 0 - Preliminary.</h3>
+<a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint0p.html">Sprint 0 - Preliminary.</a></h3>
+<br>
+<h3><a name="sprint-0---Final" class="anchor" href="#sprint-0---Final"><span class="octicon octicon-link"></span></a><a href="sprint0f.html">Sprint 0 - Final.</a></h3>
 
-<p>User stories: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/user_stories.pdf">User stories</a></p>
-
-<p>Persona 1: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/fieldworker.pdf">Fieldworker</a></p>
-
-<p>Persona 2: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/manager.pdf">Manager</a></p>
-
-<p>Persona 3: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/radiologist.pdf">Radiologist</a></p>
-
-<p>Persona 4: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/superuser.pdf">Superuser</a></p>
       </section>
 
     </div>
