--- a/sprint0f.html
+++ b/sprint0f.html
@@ -43,7 +43,7 @@
 
 <p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/group_photo.jpg">Photo</a></p>
 
-<p><a href="">Team charter</a></p>
+<p>Team charter<a href=""></a></p>
 
 <p>Persona: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/fieldworker.pdf">Fieldworker</a>,
 <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/manager.pdf">Manager</a>,
