--- a/sprint0f.html
+++ b/sprint0f.html
@@ -41,9 +41,9 @@
         <h3>
 <a name="sprint-0---Final" class="anchor" href="#sprint-0---Final"><span class="octicon octicon-link"></span></a>Sprint 0 - Final.</h3>
 
-<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/group_photo.jpg">Photo</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/group_photo.jpg">Photo</a></p>
 
-<p>Team charter<a href=""></a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/teamCharter.pdf">Team charter</a></p>
 
 <p>Persona: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/fieldworker.pdf">Fieldworker</a>,
 <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/manager.pdf">Manager</a>,
