Added project charter

--- a/sprint0f.html
+++ b/sprint0f.html
@@ -54,7 +54,7 @@
       
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/user_stories.pdf">User stories</a></p>
 
-<p><a href=""></a>Project charter</p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/projectCharter.pdf">Project charter</a></p>
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/technologiesToBeUsed.pdf">Technologies</a></p>
 
