Added testing notes

--- a/sprint0f.html
+++ b/sprint0f.html
@@ -63,7 +63,9 @@
 
 <p>Selection of user story: <a href=""></a></p>
 
-<p>Testing: <a href=""></a></p>
+<p>Testing: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/manualTesting.pdf">Manual testing plan</a>,
+For automated testing see the test subdirectories in the main branch.
+</p>
 
 <p>Design: <a href=""></a></p>
 
