--- a/sprint0f.html
+++ b/sprint0f.html
@@ -61,17 +61,17 @@
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/MeetingAttendance.pdf">Meeting Minutes & Attendance</a></p>
 
 
-<p>Selection of user story: <a href=""></a></p>
+<p>Selection of user stories for next sprint: <a href=""></a></p>
 
 <p>Testing: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/manualTesting.pdf">Manual testing plan</a>,
 For automated testing see the test subdirectories in the main branch.
 </p>
 
-<p>Design: <a href=""></a></p>
+<p>Design: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/ServerInterchangeFlowchart.png">Flowchart</a></p>
 
 <p>Implementation: <a href=""></a></p></p>
 
-<p>Run: <a href=""></a></p>
+<p>To run the automated tests: cd ultrasound-in-remote-maternal-healthcare/sprints/sprint0 &amp;&amp; sh runSprint0.sh</p>
 	  
 <p><a href="index.html">Back</a></p>
 	  </section>
