--- a/sprint0f.html
+++ b/sprint0f.html
@@ -69,7 +69,7 @@ For automated testing see the test subdirectories in the main branch.
 
 <p>Design: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/ServerInterchangeFlowchart.png">Flowchart</a></p>
 
-<p>Implementation: <a href=""></a></p></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/tree/master/src/csc301/ultrasound">Implementation</a></p></p>
 
 <p>To run the automated tests: cd ultrasound-in-remote-maternal-healthcare/sprints/sprint0 &amp;&amp; sh runSprint0.sh</p>
 	  
