--- a/sprint0f.html
+++ b/sprint0f.html
@@ -41,11 +41,11 @@
         <h3>
 <a name="sprint-0---Final" class="anchor" href="#sprint-0---Final"><span class="octicon octicon-link"></span></a>Sprint 0 - Final.</h3>
 
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/group_photo.jpg">Photo</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/group_photo.jpg">Group photo</a></p>
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/teamCharter.pdf">Team charter</a></p>
 
-<p>Persona: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/fieldworker.pdf">Fieldworker</a>,
+<p>Personas: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/fieldworker.pdf">Fieldworker</a>,
 <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/manager.pdf">Manager</a>,
 <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/radiologist.pdf">Radiologist</a>,
 <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/personas/superuser.pdf">Superuser.</a>
@@ -61,15 +61,15 @@
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/MeetingAttendance.pdf">Meeting Minutes & Attendance</a></p>
 
 
-<p>Selection of user stories for next sprint: <a href=""></a></p>
-
-<p>Testing: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/manualTesting.pdf">Manual testing plan</a>,
-For automated testing see the test subdirectories in the main branch.
-</p>
-
+<p>For selection of user stories for next sprint, please refer to the last part of <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/projectCharter.pdf">Project charter</a></p>
+<p>&nbsp;</p>
 <p>Design: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/ServerInterchangeFlowchart.png">Flowchart</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/manualTesting.pdf">Manual testing plan for android client</a></p>
 
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/tree/master/src/csc301/ultrasound">Implementation</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/tree/master/src/csc301/ultrasound">Implementation &amp; testing for selected user story:</a></p>
+<p>Selected user story: #13. &quot;As a Steven (a radiologist), I require a simple method to annotate patient’s ultrasound images 
+  with basic imaging tools so that the treatment options specified are unambiguous and clearly
+  visible to the field worker,.&quot;</p>
 
 <p>To run the automated tests: cd ultrasound-in-remote-maternal-healthcare/sprints/sprint0 &amp;&amp; sh runSprint0.sh</p>
 	  
