--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 <h3><a name="Team-Info:" class="anchor" href="#Team-Info:"><span class="octicon octicon-link"></span></a>Team-Info:</h3>
-<br>
+<br><p>Lichao Chen, Tu-Anh Dinh-Le, Vinay Gera, Katie Lo, John Mather, Assylay</p>
 
         <h3>
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint0p.html">Sprint 0 - Preliminary.</a></h3>
