Updated sprint0 website.

--- a/sprint0.html
+++ b/sprint0.html
@@ -62,16 +62,27 @@
 
 
 <p>For selection of user stories for next sprint, please refer to the last part of <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/projectCharter.pdf">Project charter</a></p>
-<p>&nbsp;</p>
 <p>Design: <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/ServerInterchangeFlowchart.png">Flowchart</a></p>
+<hr>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/tree/master/src/csc301/ultrasound/android">Preliminary android client</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/manualTesting.pdf">Manual testing plan for android client</a></p>
-
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/tree/master/src/csc301/ultrasound">Implementation &amp; testing for selected user story:</a></p>
-<p>Selected user story: #13. &quot;As a Steven (a radiologist), I require a simple method to annotate patient’s ultrasound images 
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/src/csc301/ultrasound/frontend/ui/GUI.java">Preliminary planned UI layout for radiologist client</a></p>
+<hr>
+<p>Selected user story:</p>
+<p> #13. &quot;As a Steven (a radiologist), I require a simple method to annotate patient’s ultrasound images 
   with basic imaging tools so that the treatment options specified are unambiguous and clearly
   visible to the field worker,.&quot;</p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/src/csc301/ultrasound/frontend/ui/AnnotationPanel.java">Implementation of user story</a></p>
 
-<p>To run the automated tests: cd ultrasound-in-remote-maternal-healthcare/sprints/sprint0 &amp;&amp; sh runSprint0.sh</p>
+<p>To run the automated tests: cd ultrasound-in-remote-maternal-healthcare/sprints/sprint0 &amp;&amp; sh runSprint0.sh, <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/src/csc301/ultrasound/frontend/ui/test.java">Source for test class for image annotation is located here.</a> </p>
+<p>&nbsp;</p>
+<p>Other user stories implemented:</p>
+<p>#1. As Agni (a superuser), I require a secure environment in which data will be transmitted in<br>
+  order to protect patient data from mistakes and prying eyes.</p>
+<p>#3 As Agni (a superuser), I need a lightweight and fast method of data transfer, so our<br>
+  organization can cut down on costs and increase efficiency.</p>
+<p>They are both implemented in <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/src/csc301/ultrasound/global/Transmission.java">Transmission.java</a></p>
+<p>Please run the automated test above to test these implementations as well. <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/src/csc301/ultrasound/global/tests/TransmissionTest.java">Source of test class for Transmission  is located here.</a></p>
 	  
 <p><a href="index.html">Back</a></p>
 	  </section>
