--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3>
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint0p.html">Sprint 0 - Preliminary.</a></h3>
 <br>
-<h3><a name="sprint-0---Final" class="anchor" href="#sprint-0---Final"><span class="octicon octicon-link"></span></a><a href="sprint0.html">Sprint 0 - Final.</a></h3>
+<h3><a name="sprint-0---Final" class="anchor" href="#sprint-0---Final"><span class="octicon octicon-link"></span></a><a href="sprint0f.html">Sprint 0 - Final.</a></h3>
 
       </section>
 
