--- a/sprint0f.html
+++ b/sprint0f.html
@@ -72,9 +72,9 @@
 <p> #13. &quot;As a Steven (a radiologist), I require a simple method to annotate patient’s ultrasound images 
   with basic imaging tools so that the treatment options specified are unambiguous and clearly
   visible to the field worker,.&quot;</p>
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/src/csc301/ultrasound/frontend/ui/AnnotationPanel.java">Implementation of user story</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/src/csc301/ultrasound/frontend/ui/AnnotationPanel.java">Implementation of user story</a></p>
 
-<p>To run the automated tests: cd ultrasound-in-remote-maternal-healthcare/sprints/sprint0 &amp;&amp; sh runSprint0.sh, <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/src/csc301/ultrasound/frontend/ui/test.java">Source for test class for image annotation is located here.</a> </p>
+<p>To run the automated tests: cd ultrasound-in-remote-maternal-healthcare/sprints/sprint0 &amp;&amp; sh runSprint0.sh, <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/src/csc301/ultrasound/frontend/ui/tests">Source for test class for image annotation is located here.</a> </p>
 <p>&nbsp;</p>
 <p>Other user stories implemented:</p>
 <p>#1. As Agni (a superuser), I require a secure environment in which data will be transmitted in<br>
