--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint0p.html">Sprint 0 - Preliminary.</a></h3>
 <br>
 <h3><a name="sprint-0---Final" class="anchor" href="#sprint-0---Final"><span class="octicon octicon-link"></span></a><a href="sprint0f.html">Sprint 0 - Final.</a></h3>
+<br>
+<h3><a name="sprint-1---preliminary" class="anchor" href="#sprint-1---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint1p.html">Sprint 1 - Preliminary.</a></h3>
 
       </section>
 
