Added prioritization from product owner.

--- a/sprint1p.html
+++ b/sprint1p.html
@@ -44,7 +44,7 @@
 
 <p> <a href="">Effort Estimation</a></p>
 
-<p><a href="">Prioritization by Product Owner </a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/clientEstimation.jpg">Prioritization by Product Owner </a></p>
 
 <p><a href="index.html">Back</a></p>
 	  </section>
