Added link to planning poker spreadsheet

--- a/sprint1p.html
+++ b/sprint1p.html
@@ -42,7 +42,7 @@
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a>Sprint 1 - Preliminary.</h3>
 <br>
 
-<p> <a href="">Effort Estimation</a></p>
+<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/planningPoker.pdf">Effort Estimation</a></p>
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/clientEstimation.jpg">Prioritization by Product Owner </a></p>
 
