--- a/sprint1f.html
+++ b/sprint1f.html
@@ -37,19 +37,17 @@
           <span class="credits left">Project maintained by <a href="https://github.com/CSC301H-Fall2013">CSC301H-Fall2013</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
-<h3><a name="Team-Info:" class="anchor" href="#Team-Info:"><span class="octicon octicon-link"></span></a>Team-Info:</h3>
-<br><p>Lichao Chen, Tu-Anh Dinh-Le, Vinay Gera, Katie Lo, John Mather, Assylay Sainova</p>
 
         <h3>
-<a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint0p.html">Sprint 0 - Preliminary.</a></h3>
+<a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a>Sprint 1 - Final.</h3>
 <br>
-<h3><a name="sprint-0---Final" class="anchor" href="#sprint-0---Final"><span class="octicon octicon-link"></span></a><a href="sprint0f.html">Sprint 0 - Final.</a></h3>
-<br>
-<h3><a name="sprint-1---preliminary" class="anchor" href="#sprint-1---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint1p.html">Sprint 1 - Preliminary.</a></h3>
-<br>
-<h3><a name="sprint-1---Final" class="anchor" href="#sprint-1---Final"><span class="octicon octicon-link"></span></a><a href="sprint1f.html">Sprint 1 - Final.</a></h3>
 
-      </section>
+<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/planningPoker.pdf">Effort Estimation</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/clientEstimation.jpg">Prioritization by Product Owner </a></p>
+
+<p><a href="index.html">Back</a></p>
+	  </section>
 
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
