Updating site with new documents

--- a/sprint1f.html
+++ b/sprint1f.html
@@ -46,6 +46,10 @@
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/clientEstimation.jpg">Prioritization by Product Owner </a></p>
 
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/ReleasePlanning.pdf">Release Planning</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/SpecificationForNextSprint.pdf">Specification for Next Sprint</a></p>
+
 <p><a href="index.html">Back</a></p>
 	  </section>
 
