--- a/sprint1f.html
+++ b/sprint1f.html
@@ -42,13 +42,25 @@
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a>Sprint 1 - Final.</h3>
 <br>
 
-<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/planningPoker.pdf">Effort Estimation</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/MeetingAttendance.pdf">Meeting Attendance</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/planningPoker.pdf">Effort Estimation</a></p>
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/clientEstimation.jpg">Prioritization by Product Owner </a></p>
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/ReleasePlanning.pdf">Release Planning</a></p>
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/SpecificationForNextSprint.pdf">Specification for Next Sprint</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/scrumboard.png">Scrumboard</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/scrumboard_log.txt">Scrumboard log</a></p>
+
+<p><a href="https://www.dropbox.com/s/9jjbdcos2nwzza3/VIDEO0006.mp4">Android demonstration</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/burndownChart.jpg">Burndown chart</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/velocityChart.jpg">Velocity chart</a></p>
 
 <p><a href="index.html">Back</a></p>
 	  </section>
