Added manual testing

--- a/sprint1f.html
+++ b/sprint1f.html
@@ -54,13 +54,15 @@
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/scrumboard.png">Scrumboard</a></p>
 
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/scrumboard_log.txt">Scrumboard log</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/scrumboard_log.txt">Scrumboard Log</a></p>
 
-<p><a href="https://www.dropbox.com/s/9jjbdcos2nwzza3/VIDEO0006.mp4">Android demonstration</a></p>
+<p><a href="https://www.dropbox.com/s/9jjbdcos2nwzza3/VIDEO0006.mp4">Android Demonstration</a></p>
 
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/burndownChart.jpg">Burndown chart</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/burndownChart.jpg">Burndown Chart</a></p>
 
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/velocityChart.jpg">Velocity chart</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/velocityChart.jpg">Velocity Chart</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/manualTestingLogin.pdf">Manual Testing of the Log-in</a></p>
 
 <p><a href="index.html">Back</a></p>
 	  </section>
