Added sprint planning

--- a/sprint1f.html
+++ b/sprint1f.html
@@ -64,6 +64,8 @@
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/manualTestingLogin.pdf">Manual Testing of the Log-in</a></p>
 
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/SprintPlanning.pdf">Sprint Planning</a></p>
+
 <p><a href="index.html">Back</a></p>
 	  </section>
 
