Add group photo link

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <h3><a name="Team-Info:" class="anchor" href="#Team-Info:"><span class="octicon octicon-link"></span></a>Team-Info:</h3>
 <br><p>Lichao Chen, Tu-Anh Dinh-Le, Vinay Gera, Katie Lo, John Mather, Assylay Sainova</p>
 
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint0/group_photo.jpg">Group photo</a></p>
+
         <h3>
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint0p.html">Sprint 0 - Preliminary.</a></h3>
 <br>
