--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <br><p>Lichao Chen, Tu-Anh Dinh-Le, Vinay Gera, Katie Lo, John Mather, Assylay Sainova</p>
 
 <p><a href="group_photo.jpg">Group photo</a></p>
+<img src="group_photo.jpg" alt="Goup Photo!"> 
 
         <h3>
 <a name="sprint-0---preliminary" class="anchor" href="#sprint-0---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint0p.html">Sprint 0 - Preliminary.</a></h3>
