--- a/sprint1f.html
+++ b/sprint1f.html
@@ -68,6 +68,10 @@
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/DesignAndTechnologyManifesto.pdf">Design and Technology Manifesto</a></p>
 
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/login.jar">Login binary</a></p>
+
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/tests.jar">Test binary</a></p>
+
 <p><a href="index.html">Back</a></p>
 	  </section>
 
