--- a/sprint1f.html
+++ b/sprint1f.html
@@ -68,7 +68,7 @@
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/DesignAndTechnologyManifesto.pdf">Design and Technology Manifesto</a></p>
 
-<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/login.jar">Login binary (Username: test@example.com Password: password)</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/login.jar">Login binary (See manualTestingLogin.pdf for credentials)</a></p>
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/tests.jar">Test binary (Execute via java -jar tests.jar)</a></p>
 
