Adding android binary

--- a/sprint1f.html
+++ b/sprint1f.html
@@ -72,6 +72,8 @@
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/tests.jar">Test binary (Execute via java -jar tests.jar)</a></p>
 
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint1/NepalUS.apk">Android binary</a></p>
+
 <p><a href="index.html">Back</a></p>
 	  </section>
 
