Add sprint2 preliminary

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 <h3><a name="sprint-1---preliminary" class="anchor" href="#sprint-1---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint1p.html">Sprint 1 - Preliminary.</a></h3>
 <br>
 <h3><a name="sprint-1---Final" class="anchor" href="#sprint-1---Final"><span class="octicon octicon-link"></span></a><a href="sprint1f.html">Sprint 1 - Final.</a></h3>
+<br>
+<h3><a name="sprint-2---preliminary" class="anchor" href="#sprint-2---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint2p.html">Sprint 2 - Preliminary.</a></h3>
 
       </section>
 
