--- a/sprint2p.html
+++ b/sprint2p.html
@@ -42,23 +42,23 @@
 <a name="sprint-2---preliminary" class="anchor" href="#sprint-2---preliminary"><span class="octicon octicon-link"></span></a>Sprint 2 - Preliminary.</h3>
 <br>
 
-<p> <a href="https://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG14Mzc4LTJQb0oya2E4VGZlb1k3aXc&usp=sharing#gid=0"></a>SPRINT BACKLOG</p>
-<p> <a href=""></a>SCRUM BOARD</p>
+<p> <a href="http://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG14Mzc4LTJQb0oya2E4VGZlb1k3aXc&usp=sharing#gid=0">SPRINT BACKLOG</a></p>
+<p> <a href="">SCRUM BOARD</a></p>
 
-<p><a href="/sprints/1.jpg">October 25</a></p>
-<img src="/sprints/1.jpg" alt="October 25"> 
-<p><a href="/sprints/2.jpg">October 28</a></p>
-<img src="/sprints/2.jpg" alt="October 28"> 
-<p><a href="/sprints/3.jpg">October 30</a></p>
-<img src="/sprints/3.jpg" alt="October 30"> 
-<p><a href="/sprints/4.jpg">November 4</a></p>
-<img src="/sprints/4.jpg" alt="November 4"> 
+<p><a href="1.jpg">October 25</a></p>
+<img src="1.jpg" alt="October 25"> 
+<p><a href="2.jpg">October 28</a></p>
+<img src="2.jpg" alt="October 28"> 
+<p><a href="3.jpg">October 30</a></p>
+<img src="3.jpg" alt="October 30"> 
+<p><a href="4.jpg">November 4</a></p>
+<img src="4.jpg" alt="November 4"> 
 
-<p> <a href="https://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG53bUg5R1gyTlVzT19YWUowdXkyelE&usp=sharing#gid=0"></a>BURN DOWN CHART</p>
+<p> <a href="http://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG53bUg5R1gyTlVzT19YWUowdXkyelE&usp=sharing#gid=0">BURN DOWN CHART</a></p>
 
 <p> Testing process:</p>
-<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Android%20-%20Manual%20Testing-%20Updated.pdf"></a>Android - Manual Testing(User story #18 & 19)</p>
-<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/URMH%20Interface%20-%20Manual%20Testing.pdf"></a>URMH Interface - Manual Testing(User story #9 & 16)</p>
+<p> <a href="http://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Android%20-%20Manual%20Testing-%20Updated.pdf">Android - Manual Testing(User story #18 & 19)</a></p>
+<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/URMH%20Interface%20-%20Manual%20Testing.pdf">URMH Interface - Manual Testing(User story #9 & 16)</a></p>
 
 <p><a href="index.html">Back</a></p>
 	  </section>
