--- a/sprint2p.html
+++ b/sprint2p.html
@@ -44,7 +44,7 @@
 
 <p> <a href="http://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG14Mzc4LTJQb0oya2E4VGZlb1k3aXc&usp=sharing#gid=0">SPRINT BACKLOG</a></p>
 
-<p> <a href="">SCRUM BOARD</a></p>
+<p> SCRUM BOARD:</p>
 <p><a href="1.jpg">October 25</a></p>
 <img src="1.jpg" alt="October 25"> 
 <p><a href="2.jpg">October 28</a></p>
