--- a/sprint2p.html
+++ b/sprint2p.html
@@ -58,7 +58,7 @@
 
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/MeetingAttendance.pdf">Meeting Attendance</a></p>
 
-<p> <a href="http://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG53bUg5R1gyTlVzT19YWUowdXkyelE&usp=sharing#gid=0">BURN DOWN CHART</a></p>
+<p> <a href="http://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG53bUg5R1gyTlVzT19YWUowdXkyelE&usp=sharing#gid=0">Burndown Chart</a></p>
 
 <p> Testing process:</p>
 <p> <a href="http://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Android%20-%20Manual%20Testing-%20Updated.pdf">Android - Manual Testing(User story #18 & 19)</a></p>
