--- a/sprint2p.html
+++ b/sprint2p.html
@@ -42,7 +42,7 @@
 <a name="sprint-2---preliminary" class="anchor" href="#sprint-2---preliminary"><span class="octicon octicon-link"></span></a>Sprint 2 - Preliminary.</h3>
 <br>
 
-<p> <a href="http://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG14Mzc4LTJQb0oya2E4VGZlb1k3aXc&usp=sharing#gid=0">Sprint Backlog</a></p>
+<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/SprintBacklog.pdf">Sprint Backlog</a></p>
 
 <p> SCRUM BOARD:</p>
 <p><a href="1.jpg">October 25</a></p>
