--- a/sprint2p.html
+++ b/sprint2p.html
@@ -44,15 +44,18 @@
 
 <p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/SprintBacklog.pdf">Sprint Backlog</a></p>
 
-<p> SCRUM BOARD:</p>
-<p><a href="1.jpg">October 25</a></p>
+<p> Scrum Board:</p>
 <img src="1.jpg" alt="October 25"> 
-<p><a href="2.jpg">October 28</a></p>
+<p><a href="1.jpg">October 25</a></p>
+<hr>
 <img src="2.jpg" alt="October 28"> 
-<p><a href="3.jpg">October 30</a></p>
+<p><a href="2.jpg">October 28</a></p>
+<hr>
 <img src="3.jpg" alt="October 30"> 
-<p><a href="4.jpg">November 4</a></p>
+<p><a href="3.jpg">October 30</a></p>
+<hr>
 <img src="4.jpg" alt="November 4"> 
+<p><a href="4.jpg">November 4</a></p>
 
 <p><hr></p>
 
