--- a/sprint2p.html
+++ b/sprint2p.html
@@ -63,10 +63,12 @@
 
 <p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/BurnDownVelocityChart.pdf">Burndown and Velocity Chart</a></p>
 
+<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/JustificationTesting.pdf">Testing Justification</a></p>
+
 <p> Testing process:</p>
 <p> <a href="http://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Android%20-%20Manual%20Testing-%20Updated.pdf">Android - Manual Testing(User story #18 & 19)</a></p>
 <p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/URMH%20Interface%20-%20Manual%20Testing.pdf">URMH Interface - Manual Testing(User story #9 & 16)</a></p>
-
+<p> <a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/tests.jar">Automated tests binary (Execute via java -jar tests.jar)</a></p>
 <p><a href="index.html">Back</a></p>
 	  </section>
 
