Add Next Sprint, Release Planning, Sprint Review and Updated Design and Technology Manifesto

--- a/sprint2f.html
+++ b/sprint2f.html
@@ -44,23 +44,19 @@
 
 
 <p style="color:grey">PART 1:  PROCESS</p>
-<p><a href="">&emsp; Sprint Backlog</a></p>
-<p><a href="">&emsp; Scrum Board</a></p>
-<p><a href="">&emsp; Burn Down Chart</a></p>
-<p><a href="">&emsp; Next Sprint</a></p>
-<p><a href="">&emsp; Release Planning</a></p>
-<p><a href="">&emsp; Sprint Review</a></p>
+<p><a href="">&emsp; Sprint Backlog x</a></p>
+<p><a href="">&emsp; Scrum Board x</a></p>
+<p><a href="">&emsp; Burn Down Chart x</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Specification%20for%20Next%20Sprint.pdf">&emsp; Next Sprint</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Release%20Planning.pdf">&emsp; Release Planning</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Sprint%20Review.pdf">&emsp; Sprint Review</a></p>
 
 
 <p style="color:grey">PART 2: PRODUCT TASKS</p>
-<p><a href="">&emsp; Tests</a></p>
-<p><a href="">&emsp; Implementation</a></p>
-<p><a href="">&emsp; Storyboard for User Interaction</a></p>
-<p><a href="">&emsp; Updated Design and Technology Manifesto</a></p>
-
-
-<p style="color:grey">PART 3: DEMONSTRATION</p>
-<p><a href="">&emsp; Demo</a></p>
+<p><a href="">&emsp; Tests x</a></p>
+<p><a href="">&emsp; Implementation x</a></p>
+<p><a href="">&emsp; Storyboard for User Interaction x</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/UpatedDesignAndTechnologyManifesto.pdf">&emsp; Updated Design and Technology Manifesto</a></p>
 
 
 <p><a href="index.html">Back</a></p>
