--- a/sprint2f.html
+++ b/sprint2f.html
@@ -44,7 +44,7 @@
 
 
 <p style="color:grey">PART 1:  PROCESS</p>
-<p><a href="https://docs.google.com/spreadsheet/ccc?key=0AnuIEUuIIVp4dG14Mzc4LTJQb0oya2E4VGZlb1k3aXc&usp=drive_web#gid=0">&emsp; Sprint Backlog</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Sprint%20Backlog(1).pdf">&emsp; Sprint Backlog</a></p>
 
 <p>&emsp; Scrum Board:</p>
 <p>&emsp;&emsp; Sprint2 Tasks:</p>
@@ -64,7 +64,7 @@
 <p><a href="TrelloUser.png">November 13</a></p>
 <img src="TrelloUser.png" alt="November 13"> 
 
-<p><a href="">&emsp; Burn Down Chart x</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Burn%20Down%20%26%20Velocity%20Chart.pdf">&emsp; Burn Down Chart</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Specification%20for%20Next%20Sprint.pdf">&emsp; Next Sprint</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Release%20Planning.pdf">&emsp; Release Planning</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Sprint%20Review.pdf">&emsp; Sprint Review</a></p>
@@ -79,7 +79,7 @@
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/UpatedDesignAndTechnologyManifesto.pdf">&emsp; Updated Design and Technology Manifesto</a></p>
 
 <p style="color:grey">PART 3:  DEMONSTRATION</p>
-<p><a href="">&emsp; Demo</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/NepalUS.apk">&emsp; Demo</a></p>
 
 <p><a href="index.html">Back</a></p>
 	  </section>
