--- a/sprint2f.html
+++ b/sprint2f.html
@@ -71,8 +71,10 @@
 
 
 <p style="color:grey">PART 2: PRODUCT TASKS</p>
-<p><a href="">&emsp; Tests x</a></p>
-<p><a href="">&emsp; Implementation x</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/tests.jar">&emsp; Tests</a></p>
+<p>&emsp; Implementation</p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/tree/master/src/csc301/ultrasound/android">&emsp;&emsp; Android App</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/client.jar">&emsp;&emsp; Client</a></p>
 <p>&emsp; Storyboard for User Interaction</p>
 <p><a href="StoryBoard/main.htm">&emsp;&emsp; Storyboard for Client</a></p>
 <p><a href="http://www.kizoa.com/slideshow/d6802301k7379055o1/ultrasound---storyboard">&emsp;&emsp; Storyboard for Android App</a></p>
