--- a/sprint2f.html
+++ b/sprint2f.html
@@ -64,6 +64,7 @@
 <p><a href="TrelloUser.png">November 13</a></p>
 <img src="TrelloUser.png" alt="November 13"> 
 
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/MeetingAttendance.pdf">Meeting Attendance</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Burn%20Down%20%26%20Velocity%20Chart.pdf">&emsp; Burn Down Chart</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Specification%20for%20Next%20Sprint.pdf">&emsp; Next Sprint</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/sprint2/Release%20Planning.pdf">&emsp; Release Planning</a></p>
