Add final release

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 <h3><a name="sprint-2---preliminary" class="anchor" href="#sprint-2---preliminary"><span class="octicon octicon-link"></span></a><a href="sprint2p.html">Sprint 2 - Preliminary.</a></h3>
 <br>
 <h3><a name="sprint-2---Final" class="anchor" href="#sprint-2---Final"><span class="octicon octicon-link"></span></a><a href="sprint2f.html">Sprint 2 - Final.</a></h3>
+<br>
+<h3><a name="Final Release" class="anchor" href="#Final Release"><span class="octicon octicon-link"></span></a><a href="final.html">Final Release.</a></h3>
 
       </section>
 
