Add Scrum Board.png

--- a/final.html
+++ b/final.html
@@ -43,6 +43,10 @@
 <br>
 <p style="color:#C8C8C8  ">SUBMISSIONS:</p>
 
+
+<p><a href="Scrum Board.png">&emsp; Scrum Board:</a></p>
+<img src="Scrum Board.png" alt="Final Release"> 
+
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/screencast.mov">&emsp;Screencast</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Ultrasound%20presentation%20-%20final.pptx">&emsp;Presentation</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Burn%20Down%20%26%20Velocity%20Chart.pdf">&emsp;Burn Down Chart</a></p>
@@ -56,8 +60,7 @@
 
 
 <p style="color:#C8C8C8  ">DEPLOYMENT:</p>
-<p>&emsp;Installer / Deployment</a></p>
-<p>&emsp;Deployment Functionality</a></p>
+<p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Installation.txt">&emsp;Installer / Deployment and Functionality</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Client_UserManual.pdf">&emsp;User Guide - Client</a></p>
 <p><a href="https://github.com/CSC301H-Fall2013/ultrasound-in-remote-maternal-healthcare/blob/master/sprints/final/Android%20-%20userguide%20-%20final.pdf">&emsp;User Guide - Android</a></p>
 <p>&emsp;Troubleshooting Guide - Client</a></p>
